# cpp-test-coverage-automation

./: .gitignore  CMakeLists.txt  Makefile  README.md  coverage.py
.github/workflows/: ci.yml
src/: math.cpp  math.h  math_class.cpp  math_class.h
tests/: test_class.cpp  test_func.cpp
